--- a/src/app/components/new-class-form/new-class-form.component.scss
+++ b/src/app/components/new-class-form/new-class-form.component.scss
@@ -1,4 +1,7 @@
 .newclass-form {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
     min-width: 400px;
     max-width: 400px;
     min-height: 400px;
@@ -124,19 +127,28 @@ form {
     display: flex;
     flex-direction: column;
 
-    label {
+    .label {
         font-weight: bold;
     }
 
     input {
+        height: 20px;
+    }
+
+    .input {
         padding: 10px;
         margin-top: 4px;
         margin-bottom: 12px;
         border-radius: 4px;
         border: 1px solid #ccc;
+
+        &_time {
+            margin: 0;
+        }
     }
 
-    textarea {
+    .textarea {
+        height: 50px;
         padding: 10px;
         margin-top: 4px;
         border-radius: 4px;
@@ -145,7 +157,17 @@ form {
     }
 }
 
+.date-time {
+    margin-top: 4px;
+    margin-bottom: 12px;
+}
+
+mat-label {
+    font-size: 16px;
+}
+
 .submit-button {
+    margin-top: 10px;
     padding: 10px;
     background-color: var(--brand-color);
     color: var(--light-color);
@@ -159,7 +181,8 @@ form {
 }
 
 .disclaimer {
-    margin: 10px 0;
+    // margin: 10px 0;
+    margin-top: 10px;
     font-size: 12px;
     color: var(--dark-alt-color);
 }
