--- a/src/styles.scss
+++ b/src/styles.scss
@@ -202,8 +202,8 @@ h2 {
     pointer-events: none;
     // top: -150px !important;
     // left: 250px !important;
-    top: 120px !important;
-    left: 240px !important;
+    // top: 120px !important;
+    // left: 240px !important;
     width: unset !important;
 }
 
