refactoring and cleaning up

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -29,11 +29,16 @@
                 [class.second-section]="swiperSectionID === 1" [class.third-section]="swiperSectionID === 2">
                 <div class="swiper-wrapper sections-wrapper">
                     <p class="swiper-slide sections-slide" (click)="scrollToSection('classes-section')"
-                        id="classes-button">Занятия</p>
+                        id="classes-button">
+                        Занятия
+                    </p>
                     <p class="swiper-slide sections-slide" (click)="scrollToSection('tutor-section')" id="tutor-button">
-                        Преподаватель</p>
+                        Преподаватель
+                    </p>
                     <p class="swiper-slide sections-slide" (click)="scrollToSection('studio-section')"
-                        id="studio-button">Студия</p>
+                        id="studio-button">
+                        Студия
+                    </p>
                 </div>
             </div>
         </button>
