--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -44,7 +44,7 @@
             <textarea class="textarea" type="message" formControlName="message" placeholder="Your message"></textarea>
 
             <div class="disclaimer">By clicking Submit you agree with the Privacy Terms</div>
-            <button type="submit" class="submit-button">Submit</button>
+            <button mat-buttom mat-raised-button type="submit" class="submit-button">Submit</button>
 
         </form>
     </ng-container>
@@ -86,7 +86,7 @@
             <label class="label" for="message">Message</label>
             <textarea class="textarea" type="message" formControlName="message" placeholder="Your message"></textarea>
 
-            <button type="submit" class="submit-button">Submit</button>
+            <button mat-buttom mat-raised-button type="submit" class="submit-button">Submit</button>
 
         </form>
     </ng-container>
