--- a/src/app/components/classes/classes.component.scss
+++ b/src/app/components/classes/classes.component.scss
@@ -124,15 +124,13 @@
     button {
         width: 100%;
         max-width: 300px;
-        height: 60px;
+        height: 50px;
+        max-height: unset;
         margin: 15px 0;
         background: linear-gradient(70deg, var(--light-brand-color), var(--light-alt-color) 110%);
-        border: none;
-        border-radius: 25px;
-        color: #fff;
+        border-radius: 25px !important;
         font-size: 18px;
         box-shadow: 0 0 8px var(--alt-color);
-        transition: transform 0.3s;
 
         &:hover {
             transform: scale(1.05);
