small fixes, website icon

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -187,9 +187,10 @@ h2 {
 }
 
 .image-viewer-dialog {
+    height: 80vh;
     aspect-ratio: 3 / 2;
     pointer-events: auto;
-    width: 100%;
+    // width: 100%;
 }
 
 .new-class-form-dialog {
@@ -259,9 +260,6 @@ h2 {
         max-width: none !important;
         display: flex;
         align-items: center;
-    }
-
-    .cdk-overlay-pane.mat-mdc-dialog-panel {
         height: unset;
     }
 
@@ -272,6 +270,10 @@ h2 {
 
     .mat-mdc-dialog-inner-container {
         height: unset;
+    }
+
+    .image-viewer-dialog {
+        height: 100% !important;
     }
 }
 
