--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -12,6 +12,6 @@
 
     <img class="w-h-100 cover-img"
         src="https://img42.rajce.idnes.cz/d4202/19/19234/19234587_7120b7f029e3a19a3efd09788a59d31b/images/cat_S_sing2_png.jpg?ver=1"
-        alt="Tutor in action">
+        alt="Tutor in action" loading="lazy">
 
 </div>
