--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -37,7 +37,7 @@
     <div class="flex-col h-100 swiper-container swiper-about" *ngIf="isMobile">
         <div class="swiper-wrapper">
             <mat-card class="h-100 swiper-slide about-slide" *ngFor="let card of cards">
-                <img [src]="card.image" alt="icon" class="w-h-100 about-slide__background">
+                <img [src]="card.image" alt="icon" loading="lazy" class="w-h-100 about-slide__background">
                 <mat-card-header class="flex-row center-col about-slide__header">
                     <mat-card-title>{{ card.title }}</mat-card-title>
                 </mat-card-header>
