added Router Outlet; added router paths; created Main & PrivacyPolicy components; moved main components to the MainComponent; added link to the PrivacyPolicy

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -8,7 +8,7 @@
     </div>
 
     <!-- Sigma Logo -->
-    <div class="flex-col h-100 center-row logo sigma-font" (click)="scrollToSection('home-section')">
+    <div routerLink="/" class="flex-col h-100 center-row logo sigma-font" (click)="scrollToSection('home-section')">
         <span class="logo__label">ΣΙΓΜΑ</span>
         <span class="logo__sublabel">the vocal place</span>
     </div>
