--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,2 @@
-<div class="main-wrapper">
-    <app-header class="w-100"></app-header>
-    <!-- <router-outlet></router-outlet> -->
-
-    <app-home id="home-section"></app-home>
-    <app-about id="about-section"></app-about>
-    <app-classes id="classes-section"></app-classes>
-    <app-tutor id="tutor-section"></app-tutor>
-    <app-studio id="studio-section"></app-studio>
-    <app-contacts id="contacts-section"></app-contacts>
-</div>
+<app-header class="w-100"></app-header>
+<router-outlet></router-outlet>
