--- a/src/app/components/privacy-policy/privacy-policy.component.html
+++ b/src/app/components/privacy-policy/privacy-policy.component.html
@@ -1,7 +1,76 @@
 <div class="privacy-terms-wrapper">
     <h1>Privacy Policy</h1>
     <p>
-        Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        1Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
         personal information.
     </p>
+    <p>
+        2Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        3Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        4Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        5Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        6Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        7Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        8Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        9Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        10Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        11Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        12Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        13Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        14Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        15Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        16Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        17Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+    <p>
+        18Welcome to our privacy policy page. Your privacy is important to us, and we are committed to protecting your
+        personal information.
+    </p>
+
 </div>
