--- a/src/app/components/privacy-policy/privacy-policy.component.scss
+++ b/src/app/components/privacy-policy/privacy-policy.component.scss
@@ -1,9 +1,10 @@
 .privacy-terms-wrapper {
-    padding: 20px;
+    padding: 80px 5%;
     max-width: 800px;
     margin: 0 auto;
 
     h1 {
+        margin-top: 40px;
         font-size: 36px;
         margin-bottom: 16px;
     }
@@ -12,4 +13,35 @@
         font-size: 18px;
         line-height: 1.6;
     }
+
+    a {
+        color: var(--alt-color);
+    }
 }
+
+mat-expansion-panel {
+    margin-top: 20px;
+    border-radius: 10px;
+    color: var(--light-color);
+}
+
+mat-expansion-panel-header {
+    background: var(--brand-color) !important;
+    height: 40px !important;
+    font-size: 24px;
+    border-radius: 0;
+}
+
+
+// mat-expansion-panel-content {
+//     background: var(--light-brand-color) !important;
+// }
+
+::ng-deep .mat-expansion-panel-body {
+    background: var(--light-color) !important;
+    color: #000;
+}
+
+// mat-expansion-panel-content ng-trigger ng-trigger-bodyExpansion {
+//     background: var(--light-brand-color) !important;
+// }
