--- a/src/app/components/new-class-form/new-class-form.component.scss
+++ b/src/app/components/new-class-form/new-class-form.component.scss
@@ -181,10 +181,10 @@ mat-label {
         text-decoration: underline;
         cursor: pointer;
         transition: font-weight 0.1s ease-in-out;
-    }
 
-    .privacy-terms:hover {
-        font-weight: bold;
+        &:hover {
+            font-weight: bold;
+        }
     }
 }
 
