--- a/src/app/components/new-class-form/new-class-form.component.html
+++ b/src/app/components/new-class-form/new-class-form.component.html
@@ -1,6 +1,6 @@
 <div class="newclass-form">
     <div class="form-header">
-        <h2>New class</h2>
+        <h2>Новое занятие</h2>
         <div class="close" (click)="closeDialog()">
             <mat-icon>close</mat-icon>
         </div>
@@ -12,13 +12,13 @@
             <button class="toggle-btn toggle-btn_newbie" (click)="onUserTypeSelect('new')">
                 <img class="toggle-btn__img toggle-btn__img_newbie" alt="new user" loading="lazy"
                     src="https://res.cloudinary.com/dxunxtt1u/image/upload/cat_novice_xyjz3q.png" />
-                <span class="toggle-btn__text">I'm new</span>
+                <span class="toggle-btn__text">Хочу начать</span>
             </button>
             <mat-divider [vertical]="true"></mat-divider>
             <button class="toggle-btn toggle-btn_activesub" (click)="onUserTypeSelect('signed')">
                 <img class="toggle-btn__img toggle-btn__img_activesub" alt="existing user" loading="lazy"
                     src="https://res.cloudinary.com/dxunxtt1u/image/upload/cat_pro_nllrwi.png" />
-                <span class="toggle-btn__text">I've already signed up</span>
+                <span class="toggle-btn__text">Я уже занимаюсь</span>
             </button>
         </div>
     </ng-container>
@@ -28,28 +28,28 @@
         <form [formGroup]="newbieForm" (ngSubmit)="onSubmit()">
 
             <div class="back" (click)="goBackToStart()">
-                <mat-icon>arrow_back_ios_new</mat-icon>Back
+                <mat-icon>arrow_back_ios_new</mat-icon>Назад
             </div>
 
-            <label class="label" for="name">Name</label>
+            <label class="label" for="name">Имя</label>
             <input class="input" type="text" formControlName="name" placeholder="Your name" />
 
-            <label class="label" for="phone">Phone</label>
+            <label class="label" for="phone">Телефон</label>
             <input class="input" type="text" formControlName="phone" placeholder="Your phone number" />
 
-            <label class="label" for="telegram">Telegram username</label>
+            <label class="label" for="telegram">Telegram</label>
             <input class="input" type="text" formControlName="telegram" placeholder="Your Telegram username" />
 
-            <label class="label" for="message">Message</label>
+            <label class="label" for="message">Комментарий</label>
             <textarea class="textarea" type="message" formControlName="message" placeholder="Your message"></textarea>
 
             <div class="disclaimer">
-                By clicking Submit you agree with the
-                <!-- <span routerLink="/privacy-policy" class="privacy-terms">Privacy Terms</span> -->
-                <span (click)="closeDialogAndNavigate()" class="privacy-terms">Privacy Terms</span>
+                Нажимая Отправить, вы соглашаетесь с
+                <!-- By clicking Submit you agree with the -->
+                <span (click)="closeDialogAndNavigate()" class="privacy-terms">политикой конфиденциальности</span>
             </div>
 
-            <button mat-button mat-raised-button type="submit" class="submit-button">Submit</button>
+            <button mat-button mat-raised-button type="submit" class="submit-button">Отправить</button>
 
         </form>
     </ng-container>
@@ -59,27 +59,34 @@
         <form [formGroup]="activeSubForm" (ngSubmit)="onSubmit()">
 
             <div class="back" (click)="goBackToStart()">
-                <mat-icon>arrow_back_ios_new</mat-icon>Back
+                <mat-icon>arrow_back_ios_new</mat-icon>Назад
             </div>
 
-            <label class="label" for="name">Name</label>
+            <label class="label" for="name">Имя</label>
             <input class="input" type="text" formControlName="name" placeholder="Your name" readonly />
 
-            <label class="label">Date and time</label>
+            <label class="label">
+                Дата и время
+                <!-- Date and time -->
+            </label>
             <div class="flex-row date-time">
                 <mat-form-field>
-                    <mat-label>DD.MM.YYYY</mat-label>
-                    <!-- <input matInput [matDatepicker]="picker" disabled> -->
-                    <!-- <input matInput [matDatepicker]="picker" formControlName="date" placeholder="Choose a date"> -->
-                    <!-- placeholder="Choose a date" -->
+                    <mat-label>
+                        ДД.ММ.ГГГГ
+                        <!-- DD.MM.YYYY -->
+                    </mat-label>
                     <input matInput [matDatepicker]="picker" formControlName="date" readonly>
-                    <!-- formControlName="date" placeholder="Choose a date" -->
                     <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
-                    <!-- <mat-datepicker #picker disabled="false"> -->
                     <mat-datepicker #picker>
                         <mat-datepicker-actions>
-                            <button mat-raised-button matDatepickerCancel>Cancel</button>
-                            <button mat-raised-button matDatepickerApply>Apply</button>
+                            <button mat-raised-button matDatepickerCancel>
+                                Отменить
+                                <!-- Cancel -->
+                            </button>
+                            <button mat-raised-button matDatepickerApply>
+                                Подтвердить
+                                <!-- Apply -->
+                            </button>
                         </mat-datepicker-actions>
                     </mat-datepicker>
                 </mat-form-field>
@@ -88,10 +95,16 @@
                 <input class="input input_time" type="time" formControlName="time" placeholder="Choose a time" />
             </div>
 
-            <label class="label" for="message">Message</label>
+            <label class="label" for="message">
+                Комментарий
+                <!-- Message -->
+            </label>
             <textarea class="textarea" type="message" formControlName="message" placeholder="Your message"></textarea>
 
-            <button mat-buttom mat-raised-button type="submit" class="submit-button">Submit</button>
+            <button mat-buttom mat-raised-button type="submit" class="submit-button">
+                Отправить
+                <!-- Submit -->
+            </button>
 
         </form>
     </ng-container>
@@ -104,26 +117,32 @@
     <!-- SubmitState -->
     <ng-container *ngIf="currentFormState === 'SubmitState'">
         <p class="submit__message" *ngIf="submitSuccess">
-            Your request was successful!
+            Ваш запрос был отправлен!
+            <!-- Your request was successful! -->
         </p>
         <p class="submit__message" *ngIf="submitSuccess && prevFormState === 'NewbieState'">
-            Please wait until I contact you.
+            Пожалуйста, подождите, пока я свяжусь с вами.
+            <!-- Please wait until I contact you. -->
         </p>
         <p class="submit__message" *ngIf="submitSuccess && prevFormState === 'ActiveSubState'">
-            You've signed up for your next class with <span class="sigma-font">ΣΙΓΜΑ</span>
+            Вы успешно записались на следующее занятие в <span class="sigma-font">ΣΙΓΜΑ</span>
+            <!-- You've signed up for your next class with <span class="sigma-font">ΣΙΓΜΑ</span> -->
         </p>
         <p class="submit__message" *ngIf="!submitSuccess">
-            There was an error submitting your request. Please try again.
+            Произошла ошибка во время отправления запроса. Пожалуйста, попробуйте снова.
+            <!-- There was an error submitting your request. Please try again. -->
         </p>
     </ng-container>
 
     <!-- Telegram Bot -->
-    <div class="form-footer" *ngIf="currentFormState !== 'SubmitState'">
+    <div class="flex-col center-all form-footer" *ngIf="currentFormState !== 'SubmitState'">
         <span class="form-footer__text">
-            Or sign up for a class via the
+            Или запишитесь на занятие через
+            <!-- Or sign up for a class via the -->
         </span>
         <span class="form-footer__bot">
-            Telegram bot
+            Telegram бота
+            <!-- Telegram bot -->
         </span>
     </div>
 </div>
