--- a/src/app/components/privacy-policy/privacy-policy.component.scss
+++ b/src/app/components/privacy-policy/privacy-policy.component.scss
@@ -19,14 +19,18 @@
     }
 }
 
+mat-panel-title {
+    white-space: nowrap;
+}
+
 mat-expansion-panel {
     margin-top: 20px;
-    border-radius: 10px;
+    border-radius: 4px;
     color: var(--light-color);
 }
 
 mat-expansion-panel-header {
-    background: var(--brand-color) !important;
+    background: var(--light-brand-color) !important;
     height: 40px !important;
     font-size: 24px;
     border-radius: 0;
@@ -35,4 +39,10 @@ mat-expansion-panel-header {
 ::ng-deep .mat-expansion-panel-body {
     background: var(--light-color) !important;
     color: #000;
+}
+
+#home-button {
+    margin-top: 40px;
+    width: 100%;
+    max-width: 300px;
 }
