--- a/src/app/components/mapycz/mapycz.component.html
+++ b/src/app/components/mapycz/mapycz.component.html
@@ -1,5 +1,5 @@
 <!-- Mapy CZ widget -->
-<!-- <div #mapContainer class="map-container"></div> -->
+<div #mapContainer class="map-container"></div>
 
 <!-- Tooltip with address -->
 <div #tooltip class="tooltip">
